Fix collection card button spacing
[#172410353]

--- a/src/components/collection/card/CollectionCard.less
+++ b/src/components/collection/card/CollectionCard.less
@@ -145,6 +145,7 @@
 
     .ant-btn-group {
       padding-top: 8px;
+      margin: 0;
 
       button {
         border-right: 2px solid @shade-1!important;
